syntax = "proto3";

package mantrae.v1;

import "buf/validate/validate.proto";
import "mantrae/v1/agent.proto";
import "mantrae/v1/dns_provider.proto";
import "mantrae/v1/entry_point.proto";
import "mantrae/v1/middleware.proto";
import "mantrae/v1/profile.proto";
import "mantrae/v1/router.proto";
import "mantrae/v1/servers_transport.proto";
import "mantrae/v1/service.proto";
import "mantrae/v1/traefik_instance.proto";
import "mantrae/v1/user.proto";

service UtilService {
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse);
  rpc GetPublicIP(GetPublicIPRequest) returns (GetPublicIPResponse);
  rpc EventStream(EventStreamRequest) returns (stream EventStreamResponse);
}

enum EventAction {
  EVENT_ACTION_UNSPECIFIED = 0;
  EVENT_ACTION_CREATED = 1;
  EVENT_ACTION_UPDATED = 2;
  EVENT_ACTION_DELETED = 3;
}

message GetVersionRequest {}
message GetVersionResponse {
  string version = 1;
}

message GetPublicIPRequest {}
message GetPublicIPResponse {
  string ipv4 = 1;
  string ipv6 = 2;
}

message EventStreamRequest {
  int64 profile_id = 1 [(buf.validate.field).int64.gt = 0];
}
message EventStreamResponse {
  EventAction action = 1;
  oneof data {
    Profile profile = 2;
    User user = 3;
    Agent agent = 4;
    DnsProvider dns_provider = 5;
    TraefikInstance traefik_instance = 6;
    Router router = 7;
    Service service = 8;
    Middleware middleware = 9;
    ServersTransport servers_transport = 10;
    EntryPoint entry_point = 11;
  }
}
